[package]
name = "rocket_test"
version = "0.1.0"
authors = ["Þórhallur Sverrisson <thorhallur.sverrisson@rb.is>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "*"
rocket_contrib = "*"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
jwt = "0.4.0"
