[package]
name = "rocket_test"
version = "0.1.0"
authors = ["Þórhallur Sverrisson <thorhallur.sverrisson@rb.is>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4"
rocket_contrib = "0.4"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
jsonwebtoken = "5"
